--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ permalink: /
             <div class="container-1000">
                 <h4>Taking your online business further...</h4>
                 <h1>Sybiltec</h1>
-                <p class="padding-bottom">A freelance IT consultant who can help you achieve your goals.</p>
+                <p class="padding-bottom">A freelance website designer and developer who can help you achieve your goals.</p>
                 <a class="btn-primary" href="https://sybiltec.com/services">View My Services</a>
             </div>
         </div>
@@ -88,27 +88,45 @@ permalink: /
             <div class="container-1000">
                 <h2 class="center">What Do I Offer?</h2>
                 <hr>
-                <p class="container-700 padding-top center">If you're looking for help with setting up a website for the first time, or 
-                    you have an existing site that you want to optimise, I offer a service that's 
-                    right for you:</p>
+                <p class="container-700 padding-top center">Whether you're looking for help with setting up a website for the first time, or you have an existing site that you want to optimise, I offer a service that's right for you.</p>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-4">
                         <div class="center">
                             <i class="fas fa-clipboard-check"></i>
                         <h3>Free Website Review</h3>
-                        <p>A detailed report with feedback on the main aspects of your site's user 
-                            experience, search engine optimisation (SEO) and design. Recommended 
-                            improvements are provided.</p>
+                        <p>A detailed report with feedback on the main aspects of your site's user experience, search engine optimisation (SEO) and design. Recommended improvements are provided.</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-4">
+                        <div class="center">
+                            <i class="fa-solid fa-laptop"></i>
+                        <h3>Website<br>Design</h3>
+                        <p>If you are looking to create a website that is as unique as you are, I will design a professional and user-friendly website that perfectly reflects your brand and style.</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
                         <div class="center">
                             <i class="fas fa-code"></i>
                         
                     <h3>Website Development</h3>
-                    <p>Bespoke website development services tailored to your needs, ranging from 
-                        one-off tasks, to regular website maintenance work, to a full website refresh.</p>
+                    <p>Bespoke website development services tailored to your needs, ranging from one-off tasks, to a full website refresh. Perfect for when you need support on an ad-hoc basis.</p>
                     </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="center">
+                            <i class="fas fa-tools"></i>
+                        <h3>Website Maintenance</h3>
+                        <p>As a business owner, you're most likely a very busy person with little time to spare! I will be your long-term partner to manage the ongoing maintenance of your website.</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="center">
+                            <i class="fa-solid fa-graduation-cap"></i>
+                        <h3>Training</h3>
+                        <p>Do you need a facilitator for your training event? I can host webinars or in-person workshops on topics ranging from setting up a Shopify store to cyber security issues.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="center padding-bottom">
@@ -122,31 +140,51 @@ permalink: /
             <p class="container-700 padding-top center">A selection of clients I have recently 
                 worked with:</p>
             <div class="row">
-                <div class="col-3">                    
-                    <a href="https://sybiltec.com/clients#crazy-thumbs"><img src="https://sybiltec.com/images/clients/crazy-thumbs.jpg" 
-                        alt="Crazy Thumbs"></a>
-                    <h4>Crazy Thumbs</h4>
+                <div class="col-4">                    
+                    <a href="https://sybiltec.com/clients#emrys-consulting"><img src="https://sybiltec.com/images/clients/Emrys-Consulting.jpg" 
+                        alt="Emrys Group"></a>
+                    <h4>Emrys Group</h4>
                     </div>
-                <div class="col-3">                       
+                <div class="col-4">                       
                     <a href="https://sybiltec.com/clients#nerowireart"><img src="https://sybiltec.com/images/clients/nerowireart.jpg" 
                         alt="Nerowireart"></a>
                     <h4>Nerowireart</h4>
                 </div>
-                <div class="col-3">                    
-                    <a href="https://sybiltec.com/clients#bamboo-wardrobe">
-                        <img src="https://sybiltec.com/images/clients/the-bamboo-wardrobe.jpg" 
-                        alt="The Bamboo Wardrobe"></a>
-                <h4>The Bamboo Wardrobe</h4>
-                </div>
-                <div class="col-3">                        
-                    <a href="https://sybiltec.com/clients#together-matters">
-                        <img src="https://sybiltec.com/images/clients/Together-Matters.jpg" 
-                        alt="Together Matters"></a>
-                    <h4>Together Matters</h4>
+                <div class="col-4">                    
+                    <a href="https://sybiltec.com/clients#happily-clappily-ever-laughter">
+                        <img src="https://sybiltec.com/images/clients/Happily-Clappily-Ever-Laughter.JPG" 
+                        alt="Happily Clappily Ever Laughter"></a>
+                <h4>Happily Clappily Ever Laughter</h4>
                 </div>
             </div>
             <div class="center padding-bottom">
                 <a class="btn-primary" href="https://sybiltec.com/clients">View All Clients</a>   
+            </div>
+        </div>
+        <div class="clients section">
+            <h2>Blog</h2>
+            <hr>
+            <p class="container-700 padding-top center">Read my latest blog posts.</p>
+            <div class="row">
+                <div class="col-4">                    
+                    <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="https://sybiltec.com/images/person-holding-black-iphone-5.jpg" 
+                        alt="Person holding black iPhone 5"></a>
+                    <h4>Cyber Security Best Practices for You and Your Business</h4>
+                    </div>
+                <div class="col-4">                       
+                    <a href="https://sybiltec.com/6-reasons-to-use-shopify"><img src="https://sybiltec.com/images/shopify-logo-window-with-plant.jpg" 
+                        alt="Shopify logo window with plant"></a>
+                    <h4>6 Reasons Why You Should be Using Shopify</h4>
+                </div>
+                <div class="col-4">                    
+                    <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitterg">
+                        <img src="https://sybiltec.com/images/Laptop-notepad-pen-and-iphone-on-table-1200x630.jpg" 
+                        alt="Laptop notepad pen and iPhone on table"></a>
+                <h4>WebTip Wednesday Series Launched on Twitter</h4>
+                </div>
+            </div>
+            <div class="center padding-bottom">
+                <a class="btn-primary" href="https://sybiltec.com/blog">See All Blog Posts</a>   
             </div>
         </div>
         <div class="testimonials section grey">
@@ -280,17 +318,18 @@ permalink: /
                 </div>
             </div>
         </div>
-        <div class="events section grey">
+        <div class="events section grey center">
             <div class="container-1000">
                 <h2>Why Choose Me?</h2>
-                <hr class="left-align">
+                <hr>
                 <h3>Attention to Detail</h3>
-                <p>I'll scrutinise every detail to make sure everything is just right.</p>
+                <p>I'll scrutinise every detail to make sure everything is just right. You will be presented with a pixel-perfect design.</p>
                 <h3>Affordable Prices</h3>
-                <p>Unlike other agencies, my services won't cost you a small fortune.</p>
+                <p>Unlike agencies, my services won't cost you a small fortune. Rest assured that you are getting quality service and value for money.</p>
                 <h3>A Range of Experiences</h3>
-                <p>I've developed a wide variety of skills through diverse work experiences, 
-                    ranging from music production to managing my own start-up.</p>
+                <p>I've developed a wide variety of skills through diverse work experiences, ranging from music production to managing a start-up.</p>
+                <h3>Worked With Over 20 Small Businesses</h3>
+                <p>Over the last 3 years, I've helped several SMEs from within a wide range of industry sectors  to improve their online presence.</p>
             </div>
         </div>
         <div class="contact section">
