--- a/services.html
+++ b/services.html
@@ -103,7 +103,7 @@ permalink: /services/
                 <p>The report will be provided to you in PDF format and includes recommended actions to resolve the issues.</p>
                 <p>Download a sample website review below:</p>
 
-                <a href="https://sybiltec.com/uploads/Sybiltec-Sample-Website-Review.pdf" target="_blank" rel="noopener noreferrer"><img src="https://sybiltec.com/images/Sybiltec-Sample-Website-Review.jpg" style="width: 400px;"></a>
+                <div class="center"><a href="https://sybiltec.com/uploads/Sybiltec-Sample-Website-Review.pdf" target="_blank" rel="noopener noreferrer"><img src="https://sybiltec.com/images/Sybiltec-Sample-Website-Review.jpg" style="width: 100%; max-width: 560px;"></a></div>
 
                 <h3>Website Design</h3>
                 <h4>A Fully-Customised Design for Your Website</h4>
@@ -147,6 +147,23 @@ permalink: /services/
                     <li>Theme customisations</li>
                     <li>Managing products (if you have an e-commerce store)</li>
                 </ul>
+
+                <h3>Training</h3>
+                <p>I am available to facilitate your workshop or webinar. Here are some examples of events I've run previously.</p>
+
+                <h4>Workshops</h4>
+                <p>In March 2022, as part of Start-Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. Please see the details of the workshop <a href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">here</a>.</p>
+
+                <div class="center"><img src="https://sybiltec.com/images/start-up-bromley-business-week.png" style="width:100%; max-width:560px;" alt="Start Up Bromley Business Week. Workshops and events running Monday 14th March - Saturday 19th March"></div>
+
+                <h4>Webinars</h4>
+                <p>I am a regular guest speaker on webinars hosted by <a href="https://www.cntassociates.com" target="_blank" rel="noopener noreferrer">CNT Associates</a>, where I present on various topics ranging from the basics of getting your business online, to setting up an e-commerce store with Shopify.</p>
+
+                <div style="max-width: 560px; margin-left: auto; margin-right: auto;"><div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/ZnT3T_-rjCc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+                <p class="center">Setting Up an Online Store for Your Business Using Shopify<br>(16 May 2022)</p>
+
+                </div>
 
                 <div class="center padding-bottom padding-top">
                     <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>   
