--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ permalink: /
                 <div class="col-4">                    
                     <a href="https://sybiltec.com/clients#emrys-consulting"><img src="https://sybiltec.com/images/clients/Emrys-Consulting.jpg" 
                         alt="Emrys Group"></a>
-                    <h4>Emrys Group</h4>
+                    <h4>Emrys Consulting</h4>
                     </div>
                 <div class="col-4">                       
                     <a href="https://sybiltec.com/clients#nerowireart"><img src="https://sybiltec.com/images/clients/nerowireart.jpg" 
