--- a/faqs.html
+++ b/faqs.html
@@ -23,7 +23,7 @@ permalink: /faqs/
                 "name": "How much do you charge?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "This would very much depend on the requirements of the project. Please <a href=https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd>get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for you"
+                  "text": "This would very much depend on the requirements of the project. Please <a href='https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd'>get in touch</a> to arrange an initial consultation, after which I can provide a detailed quote for you."
                 }
               }, {
                 "@type": "Question",
@@ -50,7 +50,7 @@ permalink: /faqs/
                     <li>Examples of websites to use for inspiration</li>
                 </ul>
                 <p>Preferably, I would like to work with documents submitted via 
-                    <a href=https://drive.google.com>Google Drive</a> - I can provide you with a 
+                    <a href='https://drive.google.com'>Google Drive</a> - I can provide you with a 
                     link to a shared folder. Alternatively, please send me the content by email.
                 </p>"
                 }
@@ -59,37 +59,21 @@ permalink: /faqs/
                 "name": "Which platforms do you develop on?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "I develop websites on <a href=https://wordpress.org/>WordPress</a>, 
-                    <a href=https://www.wix.com/ >Wix</a>, <a href=https://www.shopify.co.uk/>
-                        Shopify</a> and <a href=https://www.squarespace.com/>Squarespace</a>."
+                  "text": "New websites will be developed on <a href='https://www.wix.com/''>Wix</a>, <a href='https://wordpress.org'>WordPress</a> or <a href='https://www.shopify.co.uk/''>Shopify</a>. If you have an existing website on an alternative platform, e.g. BigCommerce or Squarespace, I can provide support for these too."
                 }
               }, {
                 "@type": "Question",
                 "name": "What is the process for developing a website?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"<p>The first step would be to arrange a free consultation to discuss your 
-                    requirements. After this initial meeting, I would provide you with detailed 
-                    quote. If you are happy to proceed, I will send you an agreement. Once the 
-                    agreement has been signed by both of us, I will proceed with the work.</p><ul><li>If
-                    you need a complete website to be developed, I will begin by producing the
-                    designs. After you have reviewed the designs and there are no further changes, 
-                    I will start building the site in your chosen website builder. I will ask for 
-                    feedback via email on a regular basis to ensure that the site is built 
-                    according to your specifications. When you are happy with the website and I am 
-                    satisfied that sufficient testing has been carried out, we will agree on a 
-                    date to launch the site. I will then transfer ownership of the website to you. 
-                    </li><li>If you have an existing website and you require my maintenance services, I 
-                    will request access to the platform. Once I receive the required permissions 
-                    I will begin with the work. I will send you regular updates via email so that 
-                    you are always aware of the status of the project.</li></ul>"
+                    "text":"<p>The first step would be to arrange a <a href='https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd'>free consultation</a> to discuss your requirements. After this initial meeting, I would provide you with a detailed quote. If you are happy to proceed, I will send you an agreement. Once the agreement has been signed by both of us, I will proceed with the work.</p><p>If you need a complete website to be developed, I will begin by producing the designs. After you have reviewed the designs and there are no further changes, I will start building the site in your chosen website builder. I will ask for feedback via email on a regular basis to ensure that the site is built according to your specifications. When you are happy with the website and I am satisfied that sufficient testing has been carried out, we will agree on a date to launch the site. I will then transfer ownership of the website to you.</p><p>If you have an existing website and you require my maintenance services, I will request access to the platform. Once I receive the required permissions I will begin with the work. I will send you regular updates via email so that you are always aware of the status of the project.</p>"
                 }
             }, {
                 "@type": "Question",
                 "name": "Can I see examples of your previous work?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"Of course, please see my <a href=https://sybiltec.com/clients>Clients</a> and <a href=https://sybiltec.com/design>Design</a> 
+                    "text":"Of course, please see my <a href='https://sybiltec.com/clients'>Clients</a> and <a href='https://sybiltec.com/design'>Design</a> 
                     page for examples of past work I have carried out for clients."
                 }
             }, {
@@ -97,7 +81,7 @@ permalink: /faqs/
                 "name": "What are your qualifications?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"I hold an MSc in Computer Science from the University of Kent."
+                    "text":"I hold an MSc in Computer Science from the <a href='https://www.kent.ac.uk'>University of Kent</a>."
                 }
             }, {
                 "@type": "Question",
@@ -120,7 +104,7 @@ permalink: /faqs/
                 "acceptedAnswer": {
                     "@type": "Answer",
                     "text":"Please get in touch with me 
-                    <a href=https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd>here</a>."
+                    <a href='https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd'>here</a>."
                 }
             }
                 
@@ -222,18 +206,14 @@ permalink: /faqs/
                         Alternatively, please send me the content by email.
                 </p>
                 <h3>Which platforms do you develop on?</h3>
-                <p>I develop websites on <a href="https://wordpress.org/" target="_blank" 
-                    rel="noopener noreferrer">WordPress</a>, <a href="https://www.wix.com/" 
-                    target="_blank" rel="noopener noreferrer">Wix</a>, 
-                    <a href="https://www.shopify.co.uk/" target="_blank" rel="noopener noreferrer">
-                        Shopify</a> and <a href="https://www.squarespace.com/" target="_blank" 
-                        rel="noopener noreferrer">Squarespace</a>.</p>
+                <p>New websites will be developed on <a href="https://www.wix.com/" 
+                    target="_blank" rel="noopener noreferrer">Wix</a>, <a href="https://wordpress.org/" target="_blank" 
+                    rel="noopener noreferrer">WordPress</a> or <a href="https://www.shopify.co.uk/" target="_blank" rel="noopener noreferrer">Shopify</a>. If you have an existing website on an alternative platform, e.g. BigCommerce or Squarespace, I can provide support for these too.</p>
                 <h3>What is the process for developing a website?</h3>
-                <p>The first step would be to arrange a free consultation to discuss your requirements. After this initial meeting, I would provide you with detailed quote. If you are happy to proceed, I will send you an agreement. Once the agreement has been signed by both of us, I will proceed with the work.</p>
-                    <ul>
-                        <li>If you need a complete website to be developed, I will begin by producing the designs. After you have reviewed the designs and there are no further changes, I will start building the site in your chosen website builder. I will ask for feedback via email on a regular basis to ensure that the site is built according to your specifications. When you are happy with the website and I am satisfied that sufficient testing has been carried out, we will agree on a date to launch the site. I will then transfer ownership of the website to you.</li>
-                        <li>If you have an existing website and you require my maintenance services, I will request access to the platform. Once I receive the required permissions I will begin with the work. I will send you regular updates via email so that you are always aware of the status of the project.</li>
-                    </ul>
+                <p>The first step would be to arrange a <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank" rel="noopener noreferrer">free consultation</a> to discuss your requirements. After this initial meeting, I would provide you with a detailed quote. If you are happy to proceed, I will send you an agreement. Once the agreement has been signed by both of us, I will proceed with the work.</p>
+                <p>If you need a complete website to be developed, I will begin by producing the designs. After you have reviewed the designs and there are no further changes, I will start building the site in your chosen website builder. I will ask for feedback via email on a regular basis to ensure that the site is built according to your specifications. When you are happy with the website and I am satisfied that sufficient testing has been carried out, we will agree on a date to launch the site. I will then transfer ownership of the website to you.</p>
+                <p>If you have an existing website and you require my maintenance services, I will request access to the platform. Once I receive the required permissions I will begin with the work. I will send you regular updates via email so that you are always aware of the status of the project.</p>
+
                 <h3>Can I see examples of your previous work?</h3>
                 <p>Of course, please see my <a href="https://sybiltec.com/clients">Clients</a> and 
                     <a href="https://sybiltec.com/design">Design</a> page for examples of past work I have carried out for clients.</p>
