--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@ permalink: /about/
                     <div class="col-4">
                         <h3>Who I Am</h3>
                         <hr>
-                        <p>A freelance IT consultant and MSc Computer Science graduate from the University of Kent.</p>
+                        <p>A freelance website designer and MSc Computer Science graduate from the University of Kent.</p>
                     </div>
                     <div class="col-4">
                         <h3>My Mission</h3>
