Add HubSpot embed code

--- a/blog.html
+++ b/blog.html
@@ -184,5 +184,8 @@ permalink: /blog/
             }
             document.getElementById("year").innerHTML = new Date().getFullYear();
         </script>
-    </body>
+    <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/26677352.js"></script>
+<!-- End of HubSpot Embed Code -->
+</body>
 </html>
