--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,8 @@
 <body>
 <script>
 </script>
+<!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/26677352.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 </html> 
