--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -172,5 +172,8 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
             }
             document.getElementById("year").innerHTML = new Date().getFullYear();
         </script>
-    </body>
+    <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/26677352.js"></script>
+<!-- End of HubSpot Embed Code -->
+</body>
 </html>
