--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -221,5 +221,8 @@ permalink: /5-best-tools-for-remote-working/
             }
             document.getElementById("year").innerHTML = new Date().getFullYear();
         </script>
-    </body>
+    <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/26677352.js"></script>
+<!-- End of HubSpot Embed Code -->
+</body>
 </html>
