--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -262,5 +262,8 @@ permalink: /6-reasons-to-use-shopify/
             }
             document.getElementById("year").innerHTML = new Date().getFullYear();
         </script>
-    </body>
+    <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/26677352.js"></script>
+<!-- End of HubSpot Embed Code -->
+</body>
 </html>
