--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -212,5 +212,8 @@ permalink: /6-tips-for-surviving-remote-working/
             }
             document.getElementById("year").innerHTML = new Date().getFullYear();
         </script>
-    </body>
+    <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/26677352.js"></script>
+<!-- End of HubSpot Embed Code -->
+</body>
 </html>
